# OpenSprinkler-Weather

./: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
baselineEToData/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dataPreparer.c  entrypoint.sh  prepareData.sh
baselineEToData/src/: baseline.md  main.rs
docs/: local-installation.md
src/: WateringScaleCache.ts  bindings.d.ts  constants.ts  cors.ts  errors.ts  http.ts  index.ts  server.ts  types.ts  utils.ts
src/adjustmentMethods/: AbstractAdjustmentMethod.ts  AdjustmentMethod.ts  ETo.ts  EToAdjustmentMethod.spec.ts  EToAdjustmentMethod.ts  Manual.ts  RainDelay.ts  RainDelayAdjustmentMethod.ts  WateringRestrictions.ts  Zimmerman.ts  ZimmermanAdjustmentMethod.ts  index.ts
src/baseline-eto/: cloudflare.ts  index.ts  node-fs.ts
src/baselineETo/: AbstractBaselineETo.ts  CloudflareR2.ts  errors.ts  index.ts
src/cache/geocoder/: AbstractGeocoderCache.ts  CloudflareKV.ts  NullStore.ts  index.ts
src/cache/wateringScale/: AbstractWateringScaleCache.ts  CloudflareCache.ts  index.ts
src/geocoders/: AbstractGeocoder.ts  GoogleMaps.ts  OpenWeatherMap.ts  WUnderground.ts  index.ts
src/routes/: baselineETo.ts  weather.ts
src/routes/adjustmentMethods/: AdjustmentMethod.ts  EToAdjustmentMethod.spec.ts  (+5 more)
src/timeZoneLookup/: AbstractTimeZoneLookup.ts  GoogleMaps.ts  OpenWeatherMap.ts  Static.ts  geoTz.ts  index.ts
src/utils/: evapotranspiration.ts  solarRadiation.ts  solarTimes.ts
src/weatherProviders/: OpenWeatherMap.ts  OpenWeatherMap_New.ts  WUnderground.ts  index.ts  types.ts
(+10 files in other folders)
