[package]
name = "baseline-eto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
byteorder = "1.4.3"
clap = { version =  "3.2.10", features = ["derive"] }
tracing = { version = "0.1.35", features = ["log-always"] }
